# paik-cli

./: .gitmodules  Makefile  README.md  pyproject.toml
paik_cli/: config.py  main.py  scrum.py
paik_cli/paik2json/: line.py
sample/: memo-202401.paik  memo.paik  work-note-202401.paik
