[tool.poetry]
name = "paik-cli"
version = "0.0.1"
description = ""
authors = ["paikwiki <paikwiki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-inquirer = "^1.0.3"
python-dotenv = "^1.0.0"
paik2json = "0.2.0"
inquirer = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
